Add some improvements in SecurityConfig, JwtAuthentcationFilter and JwtUtil)